--- a/.env-template
+++ b/.env-template
@@ -2,8 +2,13 @@
 GRAVITEE_LICENSE=PUT_YOUR_BASE64_LICENSE_HERE
 
 APIM_REGISTRY=graviteeio
-APIM_VERSION=4.9.2
-APIM_VERSION_GATEWAY=4.9.2-debian #Debian version is needed to run the local AI models used for the Guard Rails policy
+APIM_VERSION=4.9.3
+APIM_VERSION_GATEWAY=4.9.3-debian #Debian version is needed to run the local AI models used for the Guard Rails policy
+
+AM_REGISTRY=graviteeio
+AM_VERSION=4.9.2
+
+AE_VERSION=2.3.2
 
 MONGODB_VERSION=7.0.25
 ELASTIC_VERSION=8.19.6
