--- a/hotel-booking-a2a-agent/llm-client/pyproject.toml
+++ b/hotel-booking-a2a-agent/llm-client/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["hatchling>=1.25.0"]
 build-backend = "hatchling.build"
 
 [project]
-name = "llm_client"
+name = "llm-client"
 version = "0.1.0"
 description = "LLM client for natural language processing with Ollama"
 requires-python = ">=3.12"
@@ -22,4 +22,4 @@ dev = [
 ]
 
 [tool.hatch.build.targets.wheel]
-packages = ["llm_client"]
+packages = ["llm-client"]
