--- a/hotel-booking-a2a-agent/mcp-client/pyproject.toml
+++ b/hotel-booking-a2a-agent/mcp-client/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["hatchling>=1.25.0"]
 build-backend = "hatchling.build"
 
 [project]
-name = "mcp_client"
+name = "mcp-client"
 version = "0.1.0"
 description = "MCP client for discovering and calling tools from MCP servers"
 requires-python = ">=3.12"
@@ -23,4 +23,4 @@ dev = [
 ]
 
 [tool.hatch.build.targets.wheel]
-packages = ["mcp_client"]
+packages = ["mcp-client"]
