Externalize the mocked data of the Hotel Booking API

--- a/hotel-booking-api/pyproject.toml
+++ b/hotel-booking-api/pyproject.toml
@@ -28,3 +28,7 @@ dev = [
 
 [tool.hatch.build.targets.wheel]
 packages = ["hotel_booking_api"]
+
+[tool.hatch.build.targets.wheel.force-include]
+"hotel_booking_api/accommodations.json" = "hotel_booking_api/accommodations.json"
+"hotel_booking_api/bookings.json" = "hotel_booking_api/bookings.json"
