--- a/.env-template
+++ b/.env-template
@@ -6,7 +6,7 @@ APIM_VERSION=4.9.3
 APIM_VERSION_GATEWAY=4.9.3-debian #Debian version is needed to run the local AI models used for the Guard Rails policy
 
 AM_REGISTRY=graviteeio
-AM_VERSION=4.9.2
+AM_VERSION=4.10.0-alpha.4
 
 AE_VERSION=2.3.2
 
@@ -14,3 +14,6 @@ MONGODB_VERSION=7.0.25
 ELASTIC_VERSION=8.19.6
 
 OLLAMA_VERSION=0.12.6
+
+MCP_SERVER_CLIENT_ID=
+MCP_SERVER_CLIENT_SECRET=
