Complete rework of the gravitee init, to add apim apps and subscription, am apps, mcp server and fga

--- a/gravitee-init/Dockerfile
+++ b/gravitee-init/Dockerfile
@@ -5,6 +5,11 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY main.py am_init.py apim_init.py ./
+COPY main.py am_init.py apim_init.py openfgastore.yaml ./
+COPY am-apps/ ./am-apps/
+COPY am-mcp-servers/ ./am-mcp-servers/
+COPY apim-apis/ ./apim-apis/
+COPY apim-apps/ ./apim-apps/
+COPY apim-subscriptions/ ./apim-subscriptions/
 
 CMD ["python", "main.py"]
