--- a/gravitee-init/Dockerfile
+++ b/gravitee-init/Dockerfile
@@ -5,11 +5,12 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY main.py am_init.py apim_init.py openfgastore.yaml ./
+COPY main.py am_init.py apim_init.py ./
 COPY am-apps/ ./am-apps/
 COPY am-mcp-servers/ ./am-mcp-servers/
 COPY apim-apis/ ./apim-apis/
 COPY apim-apps/ ./apim-apps/
 COPY apim-subscriptions/ ./apim-subscriptions/
+COPY openfga/ ./openfga/
 
 CMD ["python", "main.py"]
